fix: layanan title and testimony box to align with img

--- a/public/style/layanan.css
+++ b/public/style/layanan.css
@@ -6,7 +6,7 @@
 
 .layanan h1 {
     text-align: center;
-    color:#0D62AB; 
+    color:#413405; 
     ;
     margin-bottom: 20px;
     font-size: 1.5rem;
